--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "digs-common",
   "version": "0.1.0",
   "description": "A load of common utilities shared by various digs-related packages",
-  "main": "lib/",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepublish": "node node_modules/digs-dev .",
+    "test": "grunt eslint:main"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,8 @@
     "joi": "^6.4.3",
     "lodash": "^3.9.3",
     "slug": "^0.9.1"
+  },
+  "devDependencies": {
+    "digs-dev": "^0.1.4"
   }
 }
