--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "digs-common",
-  "version": "0.2.0",
+  "version": "0.2.1-0",
   "description": "A load of common utilities shared by various digs-related packages",
   "scripts": {
     "prepublish": "digs-dev symlink",
