--- a/package.json
+++ b/package.json
@@ -29,15 +29,15 @@
     "codacy-coverage": "^1.1.2",
     "codeclimate-test-reporter": "^0.1.0",
     "digs-dev": "^0.2.2-6",
-    "eslint": "^0.24.1",
+    "eslint": "^1.1.0",
     "grunt": "^0.4.5",
     "grunt-bump": "^0.3.1",
     "grunt-cli": "^0.1.13",
-    "grunt-concurrent": "^2.0.0",
+    "grunt-concurrent": "^2.0.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-dev-update": "^1.3.0",
-    "grunt-eslint": "^16.0.0",
-    "grunt-mocha-istanbul": "boneskull/grunt-mocha-istanbul#peerdeps",
+    "grunt-eslint": "^17.1.0",
+    "grunt-mocha-istanbul": "^3.0.1",
     "istanbul-harmony": "^0.3.16",
     "jit-grunt": "^0.9.1",
     "load-grunt-config": "^0.17.2",
