--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "digs-common",
+  "name": "digs-utils",
   "version": "0.2.2-3",
-  "description": "A load of common utilities shared by various digs-related packages",
+  "description": "A load of common utilities shared by various Digs-related packages",
   "scripts": {
     "prepublish": "digs-dev install",
-    "test": "grunt eslint:main"
+    "test": "grunt test"
   },
+  "main": "lib/index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/digsjs/digs-common.git"
+    "url": "git+https://github.com/digsjs/digs-utils.git"
   },
   "author": "Christopher Hiller <boneskull@boneskull.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/digsjs/digs-common/issues"
+    "url": "https://github.com/digsjs/digs-utils/issues"
   },
-  "homepage": "https://github.com/digsjs/digs-common#readme",
+  "homepage": "https://github.com/digsjs/digs-utils#readme",
   "dependencies": {
-    "bluebird": "^2.9.32",
-    "debug": "^2.2.0",
     "joi": "^6.5.0",
     "lodash": "^3.10.0",
     "slug": "^0.9.1"
