--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "codacy-coverage": "^1.1.2",
     "codeclimate-test-reporter": "^0.1.0",
     "digs-dev": "^0.2.2-7",
-    "eslint": "^1.1.0",
+    "eslint": "^1.2.1",
     "grunt": "^0.4.5",
     "grunt-bump": "^0.3.1",
     "grunt-cli": "^0.1.13",
@@ -40,6 +40,7 @@
     "jit-grunt": "^0.9.1",
     "load-grunt-config": "^0.17.2",
     "mocha": "^2.2.5",
+    "pre-commit": "^1.1.1",
     "rewire": "^2.3.4",
     "sinon": "^1.15.4",
     "sinon-chai": "^2.8.0",
