--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "digs-utils",
+  "name": "digs-common",
   "version": "0.2.2-7",
-  "description": "A moatload of common utilities shared by various Digs-related packages",
+  "description": "A moatload of common objects and functions shared by various Digs-related packages",
   "scripts": {
     "prepublish": "digs-dev install",
     "test": "grunt test"
@@ -9,14 +9,14 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/digsjs/digs-utils.git"
+    "url": "git+https://github.com/digsjs/digs-common.git"
   },
   "author": "Christopher Hiller <boneskull@boneskull.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/digsjs/digs-utils/issues"
+    "url": "https://github.com/digsjs/digs-common/issues"
   },
-  "homepage": "https://github.com/digsjs/digs-utils#readme",
+  "homepage": "https://github.com/digsjs/digs-common#readme",
   "dependencies": {
     "bluebird": "^2.9.34",
     "joi": "^6.5.0",
