--- a/package.json
+++ b/package.json
@@ -30,17 +30,17 @@
     "chai-as-promised": "^5.1.0",
     "codacy-coverage": "^1.1.3",
     "codeclimate-test-reporter": "^0.1.1",
-    "digs-dev": "^0.2.2-7",
+    "digs-data": "^0.1.2",
+    "digs-dev": "^0.2.9",
     "eslint": "^1.4.1",
     "grunt": "^0.4.5",
-    "grunt-bump": "^0.5.0",
+    "grunt-bump": "^0.6.0",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-dev-update": "^1.4.0",
     "grunt-eslint": "^17.1.0",
     "grunt-mocha-istanbul": "^3.0.1",
-    "hapi": "^8.8.1",
-    "istanbul-harmony": "^0.3.16",
+    "istanbul": "^0.3.22",
     "jit-grunt": "^0.9.1",
     "load-grunt-config": "^0.17.2",
     "mocha": "^2.3.2",
@@ -49,5 +49,8 @@
     "sinon": "^1.16.1",
     "sinon-chai": "^2.8.0",
     "time-grunt": "^1.2.1"
+  },
+  "engines": {
+    "node": ">= 4.0.0"
   }
 }
