--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "bluebird": "^2.9.34",
     "chalk": "^1.1.1",
-    "fsm-as-promised": "^0.5.0",
+    "fsm-as-promised": "boneskull/fsm-as-promised#bluebird-warning-fix",
     "graceful-fs": "^4.1.2",
     "joi": "^6.5.0",
     "lodash": "^3.10.0",
@@ -32,7 +32,7 @@
     "codacy-coverage": "^1.1.3",
     "codeclimate-test-reporter": "^0.1.1",
     "digs-data": "^0.1.2",
-    "digs-dev": "^0.2.9",
+    "digs-dev": "^0.2.12",
     "eslint": "^1.4.1",
     "grunt": "^0.4.5",
     "grunt-bump": "^0.6.0",
