--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "digs-common",
-  "version": "0.2.2-17",
+  "version": "0.2.2",
   "description": "A moatload of common objects and functions shared by various Digs-related packages",
   "scripts": {
     "prepublish": "digs-dev install",
