--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "bluebird": "^2.9.34",
     "chalk": "^1.1.1",
-    "fsm-as-promised": "boneskull/fsm-as-promised#bluebird-warning-fix",
+    "fsm-as-promised": "^0.5.2",
     "graceful-fs": "^4.1.2",
     "joi": "^6.5.0",
     "lodash": "^3.10.0",
@@ -33,13 +33,13 @@
     "codeclimate-test-reporter": "^0.1.1",
     "digs-data": "^0.1.2",
     "digs-dev": "^0.2.12",
-    "eslint": "^1.4.1",
+    "eslint": "^1.7.1",
     "grunt": "^0.4.5",
     "grunt-bump": "^0.6.0",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-dev-update": "^1.4.0",
-    "grunt-eslint": "^17.1.0",
+    "grunt-eslint": "^17.3.1",
     "grunt-mocha-istanbul": "^3.0.1",
     "istanbul": "^0.4.0",
     "jit-grunt": "^0.9.1",
