--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bluebird": "^2.9.34",
     "chalk": "^1.1.1",
+    "debug": "^2.2.0",
     "fsm-as-promised": "^0.6.0",
     "graceful-fs": "^4.1.2",
     "joi": "^6.5.0",
