--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "graceful-fs": "^4.1.2",
     "joi": "^6.5.0",
     "lodash": "^3.10.0",
+    "mkdirp": "^0.5.1",
     "slug": "^0.9.1",
     "stampit": "^2.1.0"
   },
