--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bluebird": "^3.0.1",
     "chalk": "^1.1.1",
     "debug": "^2.2.0",
+    "errorist": "^0.1.4",
     "fsm-as-promised": "^0.6.0",
     "graceful-fs": "^4.1.2",
     "joi": "^6.5.0",
@@ -35,7 +36,6 @@
     "chai-as-promised": "^5.1.0",
     "codacy-coverage": "^1.1.3",
     "codeclimate-test-reporter": "^0.1.1",
-    "digs-data": "^0.1.2",
     "digs-dev": "^0.2.12",
     "eslint": "^1.7.1",
     "grunt": "^0.4.5",
