--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "stringify-object": "^2.3.0"
   },
   "devDependencies": {
-    "chai": "^3.2.0",
+    "chai": "^3.4.0",
     "chai-as-promised": "^5.1.0",
     "codacy-coverage": "^1.1.3",
     "codeclimate-test-reporter": "^0.1.1",
     "digs-dev": "^0.2.12",
-    "eslint": "^1.7.1",
+    "eslint": "^1.8.0",
     "grunt": "^0.4.5",
     "grunt-bump": "^0.6.0",
     "grunt-cli": "^0.1.13",
@@ -47,13 +47,13 @@
     "grunt-mocha-istanbul": "^3.0.1",
     "istanbul": "^0.4.0",
     "jit-grunt": "^0.9.1",
-    "load-grunt-config": "^0.17.2",
+    "load-grunt-config": "^0.19.0",
     "mocha": "^2.3.2",
-    "pre-commit": "^1.1.1",
-    "rewire": "^2.3.4",
-    "sinon": "^1.16.1",
+    "pre-commit": "^1.1.2",
+    "rewire": "github:thesavior/rewire",
+    "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0",
-    "time-grunt": "^1.2.1"
+    "time-grunt": "^1.2.2"
   },
   "engines": {
     "node": ">= 4.0.0"
